--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet"> 
 </head>
 <body class="center">
-  <app-root></app-root>
+  <app-root style="width: 100%;"></app-root>
 </body>
 </html>
